--- a/my-react-app/client/src/components/signup/login.css
+++ b/my-react-app/client/src/components/signup/login.css
@@ -13,6 +13,7 @@
   width: 80%;
   box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.3);
   justify-content: center;
+  height: 50vh;
 }
 
 .login-container {
